--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ dl>div{
 dl>div>dt,dd{
     width: 25%;
     font-size: 14px;
-    flex: 0.5;
+    /* flex: 0.5; */
 }
 
 .detail>dl>div>dd::before{
@@ -108,19 +108,20 @@ dl>div>dt,dd{
     clear:both;
 }
 .statistic>dl dd{
+  
     width: 100%;
-    height: 4px;
+    height: 10px;
     background: #ccc;
 }
 .statistic>dl>div> dd>span{
     display: block;
-    height: 4px;
+    height: 10px;
     background: black;
     width: 10%;
 }
 dl>div>dd{
     font-size: 14px;
-    flex: 1;
+     flex: 1; 
 }
 .contact div{
     display: flex;
