--- a/src/index.css
+++ b/src/index.css
@@ -91,12 +91,12 @@ dl>div{
     align-items: center;
 }
 dl>div>dt,dd{
-    width: 25%;
+    width: 15%;
     font-size: 14px;
     /* flex: 0.5; */
 }
 
-.detail>dl>div>dd::before{
+.detail dl>div>dd::before{
     content: ":";
     margin-right: auto;
     padding-left: 10px;
@@ -107,13 +107,13 @@ dl>div>dt,dd{
     display: block;
     clear:both;
 }
-.statistic>dl dd{
+.statistic dl dd{
   
     width: 100%;
     height: 10px;
     background: #ccc;
 }
-.statistic>dl>div> dd>span{
+.statistic dl>div> dd>span{
     display: block;
     height: 10px;
     background: black;
